[package]
name          = "safe_dns"
version       = "0.3.1"
authors       = ["MaidSafe Developers <dev@maidsafe.net>"]
description   = "SAFE DNS API library"
documentation = "http://maidsafe.net/safe_dns/latest"
repository    = "https://github.com/maidsafe/safe_dns"
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[dependencies]
# ---- Maidsafe ----
routing         = "~0.4.2"
safe_nfs        = "~0.3.1"
safe_core       = "~0.3.1"

# ---- Others ----
log             = "~0.3.3"
sodiumoxide     = "~0.0.9"
rustc-serialize = "~0.3.16"

[dev-dependencies]
regex = "~0.1.41"

[features]
use-mock-routing = ["safe_core/use-mock-routing",
                    "safe_nfs/use-mock-routing"]
