[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE DNS API library"
documentation = "http://maidsafe.net/safe_dns/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_dns"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_dns"
version = "0.5.0"

[dependencies]
log = "~0.3.4"
maidsafe_utilities = "~0.1.5"
routing = "~0.6.1"
rustc-serialize = "~0.3.16"
safe_core = "~0.5.0"
safe_nfs = "~0.5.0"
sodiumoxide = "~0.0.9"
xor_name = "~0.0.1"

[dev-dependencies]
regex = "~0.1.44"

[features]
use-mock-routing = ["safe_core/use-mock-routing", "safe_nfs/use-mock-routing"]
