[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE DNS API library"
documentation = "http://maidsafe.net/safe_dns/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_dns"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_dns"
version = "0.6.0"

[dependencies]
clippy = {version = "~0.0.44", optional = true}
log = "~0.3.5"
maidsafe_utilities = "~0.2.0"
routing = "~0.7.0"
rustc-serialize = "~0.3.16"
safe_core = "~0.6.0"
safe_nfs = "~0.6.0"
sodiumoxide = "~0.0.9"
xor_name = "~0.0.4"

[dev-dependencies]
regex = "~0.1.44"

[features]
use-mock-routing = ["safe_core/use-mock-routing", "safe_nfs/use-mock-routing"]
